[gd_scene load_steps=5 format=3 uid="uid://p0qhd7kbe6f6"]

[ext_resource type="Script" uid="uid://d1fvxifx2cfef" path="res://_debug/debug_panel.gd" id="1_g5q3q"]

[sub_resource type="LabelSettings" id="LabelSettings_c3qqn"]
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntve1"]
bg_color = Color(1, 1, 1, 0.223529)

[sub_resource type="LabelSettings" id="LabelSettings_b6fb3"]
font_size = 18

[node name="DebugPanel" type="ColorRect"]
z_index = 1
offset_right = 268.0
offset_bottom = 195.0
color = Color(0, 0, 0, 0.458824)
script = ExtResource("1_g5q3q")

[node name="GravityLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_top = 88.0
offset_right = 136.0
offset_bottom = 224.0
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Gravity:
[color=red]X:[/color] 0
[color=green]Y:[/color] 0
[color=blue]Z:[/color] 0"

[node name="VelocityLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 88.0
offset_bottom = 224.0
grow_horizontal = 0
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Lin. Velocity:
[color=red]X:[/color] 0
[color=green]Y:[/color] 0
[color=blue]Z:[/color] 0"

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 59.0
offset_bottom = 89.0
grow_horizontal = 2
text = "Speed:"
label_settings = SubResource("LabelSettings_c3qqn")

[node name="StateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 31.0
offset_bottom = 61.0
grow_horizontal = 2
text = "State:"
label_settings = SubResource("LabelSettings_c3qqn")

[node name="DebugLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ntve1")
text = "DEBUG INFO"
label_settings = SubResource("LabelSettings_b6fb3")
horizontal_alignment = 1
